--- a/assets/templates/crypto/template/about.html
+++ b/assets/templates/crypto/template/about.html
@@ -35,15 +35,15 @@
       <div class="container__adv  container__adv--pm">
         <h1>About Us</h1>
         <p class="page-main__about--title">Cryptologi cryptocurrency exchange puts you first</p>
-        <p>Founded in 2017, Cypriot -based cryptologi is a leading Bitcoin exchange in euro volume and liquidity and offering trading other cryptocurrency tokens. cryptologi is consistently rated in the same line with the best and most secure Bitcoin exchange and develop high end technologies solutions for the crypto market.</p>
-        <p>We are partner with the the most trusted liquidity providers and trusted by hundreds of thousands of traders around the world.</p>
+        <p>Founded in 2017, Cypriot - based Cryptologi is a leading Bitcoin exchange in euro volume and liquidity and offering trading other cryptocurrency tokens. cryptologi is consistently rated in the same line with the best and most secure Bitcoin exchange and develop high end technologies solutions for the crypto market.</p>
+        <p>We are partner with the most trusted liquidity providers and trusted by hundreds of thousands of traders around the world.</p>
         <p class="page-main__about--title">Our values</p>
         <p class="page-main__about--title">Transperancy</p>
         <p>We believe transparency is a crucial demand as we are committed for the prices and transactions and for the processing of orders in our platforms.</p>
         <p class="page-main__about--title">Professionalism</p>
         <p>We are dedicated to our product and your experience.</p>
         <p class="page-main__about--title">Guarantee</p>
-        <p class="page-main--pb">Your funds and tokens are guarantee with segregated account, separate from client funds and audited by respected accountants and nominee.</p>
+        <p class="page-main--pb">Your funds and tokens are guaranteed with segregated account, separate from client funds and audited by respected accountants and nominee.</p>
       </div>
     </div>
   </main>
