--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -1,5 +1,4 @@
 .cloud {
-  position: relative;
   margin-top: -150px;
   background: url('../img/cloud-bg.png');
 }
@@ -32,4 +31,15 @@
   font-weight: bold;
   background: #000;
   text-transform: uppercase;
+}
+
+@media screen and ($tablet-widths) {
+  .cloud {
+    margin-top: -350px;
+    background: url('../img/cloud-bg.png');
+  }
+}
+
+@media screen and ($mobile-widths) {
+
 }
