--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -267,6 +267,25 @@ body {
   color: #4183c4;
   text-decoration: underline; }
 
+@media screen and (max-width: 768px) {
+  .hardware__video {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .hardware__video iframe {
+      margin-bottom: 40px; }
+  .hardware__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .hardware__title {
+    padding-top: 40px; } }
+
 .tabs__flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -298,6 +317,17 @@ body {
     color: #000;
     text-decoration: underline;
     opacity: 1; }
+
+@media screen and (max-width: 768px) {
+  .tabs__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; } }
 
 .mining {
   min-height: 550px;
@@ -357,6 +387,20 @@ body {
   .cloud {
     margin-top: -350px;
     background: url("../img/cloud-bg.png"); } }
+
+@media screen and (max-width: 768px) {
+  .cloud__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .cloud__left,
+  .cloud__middle {
+    width: auto; } }
 
 .why {
   background: url("../img/why-bg.png"); }
