--- a/assets/templates/miner/sass/blocks/tabs.scss
+++ b/assets/templates/miner/sass/blocks/tabs.scss
@@ -35,3 +35,15 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {
+
+}
+
+@media screen and ($mobile-widths) {
+  .tabs__flex {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+}
