--- a/assets/templates/miner/sass/blocks/hardware.scss
+++ b/assets/templates/miner/sass/blocks/hardware.scss
@@ -72,8 +72,26 @@
   text-decoration: underline;
 }
 
+@media screen and ($tablet-widths) {}
 
-
+@media screen and ($mobile-widths) {
+  .hardware__video {
+    flex-direction: column;
+    align-items: center;
+    
+    & iframe {
+      margin-bottom: 40px;
+    }
+  }
+  
+  .hardware__list {
+    flex-direction: column;
+  }
+  
+  .hardware__title {
+    padding-top: 40px;
+  }
+}
 
 
 
