--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -45,6 +45,12 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    padding-top: 130px;
+  }
+  
+  .cloud__title {
+    padding: 10px;
+    font-size: 30px;
   }
   
   .cloud__left,
