--- a/assets/templates/miner/sass/blocks/why.scss
+++ b/assets/templates/miner/sass/blocks/why.scss
@@ -34,3 +34,13 @@
 .padding-bottom {
   padding-bottom: 100px;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .why__flex {
+    flex-direction: column;
+    margin-top: 0px;
+    padding-bottom: 50px;
+  }
+}
