--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -184,7 +184,9 @@
   }
   
   .page-header__time {
+    // width: 50%;
     justify-content: center;
+    flex-wrap: wrap;
   }
   
   .page-header__offer {
