Fix img in slider

--- a/assets/templates/forex/sass/blocks/slider.scss
+++ b/assets/templates/forex/sass/blocks/slider.scss
@@ -20,17 +20,17 @@
 }
 
 .slider__slide--one {
-  background: url('../img/slider-1.png') no-repeat center;
+  background: url('../img/slider-f.png') no-repeat center;
   background-size: cover;
 }
 
 .slider__slide--two {
-  background: url('../img/slider-2.png') no-repeat center;
+  background: url('../img/slider-s.png') no-repeat center;
   background-size: cover;
 }
 
 .slider__slide--three {
-  background: url('../img/slider-3.png') no-repeat center;
+  background: url('../img/slider-t.png') no-repeat center;
   background-size: cover;
 }
 
