--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -251,15 +251,15 @@ body {
   height: 500px; }
 
 .slider__slide--one {
-  background: url("../img/slider-1.png") no-repeat center;
+  background: url("../img/slider-f.png") no-repeat center;
   background-size: cover; }
 
 .slider__slide--two {
-  background: url("../img/slider-2.png") no-repeat center;
+  background: url("../img/slider-s.png") no-repeat center;
   background-size: cover; }
 
 .slider__slide--three {
-  background: url("../img/slider-3.png") no-repeat center;
+  background: url("../img/slider-t.png") no-repeat center;
   background-size: cover; }
 
 .slick-dots {
@@ -515,7 +515,7 @@ body {
 
 .scroll__second {
   min-height: 470px;
-  background: url("../img/scroll-test.png") no-repeat top;
+  background: url("../img/scroll-s.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed; }
 
