--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -195,6 +195,6 @@
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
-  <script async src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
