--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -179,16 +179,16 @@
           <ul>
             <li><a href="template/about.html">About Us</a></li>
             <li><a href="template/contact.html">Contact</a></li>
-            <li><a href="template/legal.html">Legal & Privacy</a></li>
-            <li><a href="template/terms.html">Terms & Conditions</a></li>
+            <li><a href="template/support.html">Support</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="template/faq.html">FAQ</a></li>
-            <li><a href="template/support.html">Support</a></li>
-            <li><a href="template/trading.html">Trading Guide</a></li>
+            <li><a href="template/legal.html">Legal & Privacy</a></li>
+            <li><a href="template/terms.html">Terms & Conditions</a></li>
+            <!-- <li><a href="template/trading.html">Trading Guide</a></li> -->
             <!-- <li><a href="template/disclaimer.html">Disclaimer</a></li> -->
           </ul>
         </div>
