--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -76,16 +76,16 @@
           <ul>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="legal.html">Legal & Privacy</a></li>
-            <li><a href="terms.html">Terms & Conditions</a></li>
+            <li><a href="trading.html">Support</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="trading.html">Support</a></li>
-            <li><a class="page-footer--active">Trading Guide</a></li>
+            <li><a href="legal.html">Legal & Privacy</a></li>
+            <li><a href="terms.html">Terms & Conditions</a></li>
+            <!-- <li><a class="page-footer--active">Trading Guide</a></li> -->
           </ul>
         </div>
       </div>
