--- a/assets/templates/crypto/template/about.html
+++ b/assets/templates/crypto/template/about.html
@@ -62,16 +62,16 @@
           <ul>
             <li><a class="page-footer--active">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="legal.html">Legal & Privacy</a></li>
-            <li><a href="terms.html">Terms & Conditions</a></li>
+            <li><a href="support.html">Support</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="trading.html">Trading Guide</a></li>
+            <li><a href="legal.html">Legal & Privacy</a></li>
+            <li><a href="terms.html">Terms & Conditions</a></li>
+            <!-- <li><a href="trading.html">Trading Guide</a></li> -->
           </ul>
         </div>
       </div>
