--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -139,15 +139,17 @@
       top: 10px;
       left: 20px;
       right: auto;
+      width: 40px;
+      height: 40px;
       z-index: 20;
       
         &::before,
         &::after {
           content: "";
           position: absolute;
-          top: 25px;
-          left: 10px;
-          width: 36px;
+          top: 20px;
+          left: 8px;
+          width: 25px;
           height: 2px;
           background-color: #fff;
           box-shadow: none;
