--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -137,8 +137,7 @@
   .page-header__main-nav--opened {
     .page-header__toggle {
       top: 10px;
-      left: 20px;
-      right: auto;
+      right: 20px;
       width: 40px;
       height: 40px;
       z-index: 20;
