--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -85,6 +85,27 @@
           <a href="#">Read More</a>
         </div>
       </div>
+      <!-- Slider on mobile -->
+      <div class="online__slider">
+        <div class="slider__slide  online__slide--one">
+          <div class="online__box  online__box--zulu">
+            <b>Invest with the best!</b>
+            <p>Discover and copy the top traders<br>from all over the world</p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="slider__slide  online__slide--two">
+          <div class="online__box  online__box--zulu">
+            <b>Invest with the best!</b>
+            <p>Discover and copy the top traders<br>from all over the world</p>
+            <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="slider__slide  online__slide--three">
+          
+        </div>
+      </div>
+      <!-- Slider off -->
     </div>
   </section>
   <section class="global">
