--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -57,6 +57,7 @@
 @media screen and ($mobile-widths) {
   .global {
     min-height: 600px;
+    margin-top: -50px;
     text-align: center;
     background-size: cover; 
     
