--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -4,6 +4,7 @@
 @import 'global/font';
 
 @import 'blocks/page-header';
+@import 'blocks/nav';
 @import 'blocks/hardware';
 @import 'blocks/tabs';
 @import 'blocks/mining';
