--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -10,7 +10,26 @@
 <body>
   <header class="page-header">
     <div class="container">
+      <div class="nav">
+        <div class="nav__left">
+          <a href="#">Start</a>
+          <a href="#">News</a>
+          <a href="#">Pool</a>
+          <a href="#">Cloud</a>
+          <a href="#">Software</a>
+          <a href="#">Hardware</a>
+        </div>
+        <div class="nav__right">
+          <div class="nav__language">
+            <a href="#">RU </a>/
+            <a href="#">EN</a>
+          </div>
+          <a href="#">Log In</a>
+          <a href="#">Join Us</a>
+        </div>
+      </div>
       <div class="page-header__title">
+        <h1>CRYPTOMINER.COM</h1>
         <b>WE MINE SINCE 1812</b>
         <div class="page-header__social">
           <a class="page-header__link  page-header__link--phone" href="#"></a>
