--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -219,6 +219,18 @@
   </section>
   <section class="mining"></section>
   <section class="truck"></section>
+  <section class="proof">
+    <div class="container">
+      <div class="proof__flex">
+        <div class="proog__left">
+          <p></p>
+        </div>
+        <div class="proof__right">
+          
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="edge"></section>
   <section class="cloud">
     <div class="container">
