--- a/assets/templates/miner/sass/blocks/truck.scss
+++ b/assets/templates/miner/sass/blocks/truck.scss
@@ -1,6 +1,6 @@
 .truck {
   min-height: 650px;
-  margin-top: -50px;
+  // margin-top: -50px;
   background: url('../img/truck-bg.png') no-repeat top;
   background-size: cover;
 }
