--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/tabs';
 @import 'blocks/mining';
 @import 'blocks/truck';
+@import 'blocks/proof';
 @import 'blocks/edge';
 @import 'blocks/cloud';
 @import 'blocks/why';
