--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -52,7 +52,13 @@ body {
   font-style: normal; }
 
 .page-header {
-  background: #0f0e12 url("../img/header-bg.png") no-repeat; }
+  background: #0f0e12 url("../img/header-bg.png") no-repeat;
+  background-size: cover; }
+  .page-header h1 {
+    margin-top: 100px;
+    margin-bottom: 0;
+    color: #fff;
+    font-size: 60px; }
 
 .page-header__title {
   padding-top: 15px; }
@@ -135,7 +141,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 100px; }
+  margin-top: 90px; }
 
 .page-header__item {
   display: -webkit-box;
@@ -164,7 +170,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 100px;
+  margin-top: 150px;
   padding-bottom: 50px; }
   .page-header__about b {
     font-size: 25px;
@@ -386,13 +392,12 @@ body {
     align-items: center; } }
 
 .mining {
-  min-height: 550px;
+  min-height: 1100px;
   background: url("../img/mining-bg.png") no-repeat top;
   background-size: cover; }
 
 .truck {
   min-height: 650px;
-  margin-top: -50px;
   background: url("../img/truck-bg.png") no-repeat top;
   background-size: cover; }
 
