--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -1,6 +1,13 @@
 .page-header {
   background: #0f0e12 url('../img/header-bg.png') no-repeat;
-  // background-size: cover;
+  background-size: cover;
+  
+  & h1 {
+    margin-top: 100px;
+    margin-bottom: 0;
+    color: #fff;
+    font-size: 60px;
+  }
 }
 
 .page-header__title {
@@ -100,7 +107,7 @@
 .page-header__offer {
   display: flex;
   justify-content: space-between;
-  margin-top: 100px;
+  margin-top: 90px;
 }
 
 .page-header__item {
@@ -127,7 +134,7 @@
 .page-header__about {
   display: flex;
   justify-content: space-between;
-  margin-top: 100px;
+  margin-top: 150px;
   padding-bottom: 50px;
   
   & b {
