--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -222,13 +222,25 @@
   <section class="proof">
     <div class="container">
       <div class="proof__flex">
-        <div class="proog__left">
-          <p></p>
+        <div class="proof__left">
+          <p>WHAT IS<br>PROOF OF WORK?</p>
         </div>
         <div class="proof__right">
-          
+          <p>it costs processing<br>power which can be<br>translated to:</p>
         </div>
       </div>
+      <div class="proof__flex">
+        <div class="proof__box  proof__box--energy">
+          Energy
+        </div>
+        <div class="proof__box  proof__box--hard">
+          Hardware
+        </div>
+        <div class="proof__box  proof__box--time">
+          Time
+        </div>
+      </div>
+      <p class="proof__resume">It is easy ,on the other hand, for others to check if the requirements were met</p>
     </div>
   </section>
   <section class="edge"></section>
