--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -243,6 +243,7 @@
       <p class="proof__resume">It is easy ,on the other hand, for others to check if the requirements were met</p>
     </div>
   </section>
+  <section class="rewards"></section>
   <section class="edge"></section>
   <section class="cloud">
     <div class="container">
