--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/mining';
 @import 'blocks/truck';
 @import 'blocks/proof';
+@import 'blocks/rewards';
 @import 'blocks/edge';
 @import 'blocks/cloud';
 @import 'blocks/why';
