--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -244,6 +244,18 @@
     </div>
   </section>
   <section class="rewards"></section>
+  <section class="diff">
+    <div class="container">
+      <div class="diff__flex">
+        <div class="diff__left">
+          <p>What is<br>mining difficulty?</p>
+        </div>
+        <div class="diff__right">
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="edge"></section>
   <section class="cloud">
     <div class="container">
