--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/truck';
 @import 'blocks/proof';
 @import 'blocks/rewards';
+@import 'blocks/diff';
 @import 'blocks/edge';
 @import 'blocks/cloud';
 @import 'blocks/why';
