--- a/assets/templates/crypto-b/templates/contact.html
+++ b/assets/templates/crypto-b/templates/contact.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>Contact Us</h1>
-        <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
+        <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
       </div>
     </div>
   </header>
