--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -251,8 +251,12 @@
           <p>What is<br>mining difficulty?</p>
         </div>
         <div class="diff__right">
-          <p></p>
+          <p>it’s a measure of how difficult is<br>to find a hash below the target<br>value (a 256-bit number) during<br>the proof of work</p>
         </div>
+      </div>
+      <div class="diff__flex ">
+        <div class="diff__up"></div>
+        <div class="diff__down"></div>
       </div>
     </div>
   </section>
