--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -71,7 +71,7 @@
           <p>If any corrections are made, which change the policies and protocol for private data gathered by Cryptologi, the clients will be promptly informed about it. The client has the right to decide whether his private data will be used in a certain way. Any other change or correction which is not related to a client`s private date will be posted on the platform.</p>
           <p class="page-main__about--title">Mailing info</p>
           <p>In case you have any inquiries regarding the privacy protocol or something related to the platform, please feel free to contact us at any time. You can send us an e-mail, call us or fax us. There is always a dedicated Cryptologi employee to answer your questions.</p>
-          <p class="page-main__about--title  page-main--pb">Registered Address:<br>GRANIT OAK WORLDWIDE LIMITED, Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus<br>Mailing Address:<br>Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
+          <p class="page-main__about--title  page-main--pb">Registered Address:<br>GRANIT OAK WORLDWIDE LIMITED, Igoumenitsas 12, , 2027 Nicosia, Cyprus<br>Mailing Address:<br>Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
         </div>
       </div>
     </div>
@@ -104,8 +104,8 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
-    </div>
+      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, , 2027 Nicosia, Cyprus<br><br>Criptologi is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
+Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>    </div>
   </footer>
 </body>
 </html>
