--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -35,8 +35,8 @@
       <div class="container__adv  container__adv--pm">
         <h1>Disclaimer</h1>
         <p>You should familiarize yourself with the things listed here. When you enter the website and it`s subdomains, you are accepting to abide by the stated terms and conditions. In case you are in a disagreement with them, then you should not enter the website.</p>
-        <p>Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017. GRANIT OAK WORLDWIDE LIMITED All Rights Reserved, Registered in Cyprus, Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus (“Cryptologi“) unless otherwise indicated.</p>
-        <p>Credit card clearing is processed by GRANIT OAK WORLDWIDE LIMITED with registered address , Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
+        <p>Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017. GRANIT OAK WORLDWIDE LIMITED All Rights Reserved, Registered in Cyprus, Igoumenitsas 12, , 2027 Nicosia, Cyprus (“Cryptologi“) unless otherwise indicated.</p>
+        <p>Credit card clearing is processed by GRANIT OAK WORLDWIDE LIMITED with registered address , Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
         <p class="page-main__about--title">Trademarks</p>
         <p>Cryptologi  is trademark and service mark of GRANIT OAK WORLDWIDE LIMITED and it used and/or registered throughout the world. GRANIT OAK WORLDWIDE LIMITED and its subsidiaries also claim rights in certain other trademarks and service marks contained in these web pages. Copies of the contents may be viewed and downloaded for your own personal non-commercial use, provided that any copy contains this Copyright/Disclaimer Notice. The contents may not otherwise be used in whole or in part in any manner without the prior written consent of Cryptologi. However, it is permissible to use the website contents for viewing and copying, but only if it is for private and not commercial usage. It is again, part of the rules you agree to follow by entering the website. Please note that any other usage of the contents found on Cryptologi is not allowed without permission.</p>
         <p class="page-main__about--title">Usage of information and other files</p>
@@ -196,8 +196,8 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, CONNECTEDSKY HOUSE, 2027 Nicosia, Cyprus</p>
-    </div>
+      <p class="page-footer__copyright">© Copyright 2017 Cryptologi, All right reserved. Cryptologi is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, , 2027 Nicosia, Cyprus<br><br>Criptologi is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
+Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>    </div>
   </footer>
 </body>
 </html>
