--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -1,6 +1,7 @@
 .cloud {
-  margin-top: -150px;
+  margin-top: -110px;
   background: url('../img/cloud-bg.png');
+  background-size: cover;
 }
 
 .cloud__flex {
