--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -503,6 +503,7 @@ body {
   background-size: cover; }
 
 .cloud {
+  min-height: 850px;
   margin-top: -110px;
   background: url("../img/cloud-bg.png");
   background-size: cover; }
