--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -284,27 +284,24 @@
         <div class="why__left">
           <b>What are Bitcoin<br>CLOUDMining advantages?</b>
           <ul>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
+            <li>No excess heat to deal with. </li>
+            <li>Quiet becouse of no constantly humming fans.</li>
+            <li>No electricity costs.</li>
+            <li>No bitcoin mining equipment to sell when bitcoin mining is no longer profitable.</li>
+            <li>No ventilation problems with hot equipment.</li>
+            <li>No preordered mimig hardware that may not be delivered on time by bitcoin mining equipment suppliers.</li>
           </ul>
         </div>
         <div class="why__right">
           <b>What are Bitcoin<br>CLOUDMining disadvantages?</b>
           <ul>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
-            <li>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain</li>
-            <li>Bitcoin mining is the process of adding</li>
+            <li>FRAUD!</li>
+            <li>Unverifiable or otherwise shady Bitcoin cloud mining operation.</li>
+            <li>No fun! If you like building your own Bitcoin hashing systems.</li>
+            <li>Lower profits - Bitcoin cloud mining services or operations have expenses.</li>
+            <li>Bitcoin mining contracts may have the ability to cease operations or payouts in the contracts if the Bitcoin price is too low.</li>
+            <li>Lack of possession of the Bitcoin mining hardware.</li>
+            <li>Lack of ability to change the Bitcoin mining software.</li>
           </ul>
         </div>
       </div>
