--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -194,9 +194,14 @@ body {
 
 @media screen and (max-width: 768px) {
   .page-header {
-    min-height: 900px; }
+    min-height: 950px; }
+    .page-header h1 {
+      margin-top: 50px;
+      font-size: 30px; }
   .page-header__title {
     text-align: center; }
+    .page-header__title b {
+      font-size: 20px; }
   .page-header__social {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
@@ -221,6 +226,8 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   padding-top: 50px; }
 
 .nav__left a {
@@ -266,6 +273,14 @@ body {
     .nav__language a:hover {
       color: #ffcc31;
       background: none; }
+
+@media screen and (max-width: 768px) {
+  .nav {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .nav__right {
+    margin-top: 20px; } }
 
 .hardware h2 {
   margin-top: 70px;
@@ -396,6 +411,10 @@ body {
   background: url("../img/mining-bg.png") no-repeat top;
   background-size: cover; }
 
+@media screen and (max-width: 1200px) {
+  .mining {
+    min-height: 1100px; } }
+
 .truck {
   min-height: 650px;
   margin-bottom: 90px;
@@ -405,7 +424,7 @@ body {
 @media screen and (max-width: 1200px) {
   .truck {
     min-height: 500px;
-    margin-top: -150px; } }
+    margin-top: 50px; } }
 
 .proof__flex {
   display: -webkit-box;
@@ -456,10 +475,23 @@ body {
   font-size: 30px;
   text-align: center; }
 
+@media screen and (max-width: 1200px) {
+  .proof__flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    padding-bottom: 70px; } }
+
 .rewards {
   min-height: 1600px;
-  background: url("../img/rewards-bg.png");
+  background: url("../img/rewards-bg.png") no-repeat;
   background-size: cover; }
+
+@media screen and (max-width: 1200px) {
+  .rewards {
+    min-height: 1000px; } }
 
 .diff__flex {
   display: -webkit-box;
@@ -538,7 +570,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .cloud {
-    margin-top: -350px;
+    margin-top: -150px;
     background: url("../img/cloud-bg.png"); } }
 
 @media screen and (max-width: 768px) {
