--- a/assets/templates/miner/sass/blocks/nav.scss
+++ b/assets/templates/miner/sass/blocks/nav.scss
@@ -1,6 +1,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 50px;
 }
 
@@ -60,3 +61,16 @@
   }
 }
 
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .nav {
+    justify-content: center;
+  }
+  
+  .nav__right {
+    margin-top: 20px;
+  }
+}
