--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -155,7 +155,7 @@
   }
 }
 
-@media screen and ($tablet-widths) {
+@media screen and ($tablet-widths) {  
   .page-header__about {
     margin-top: 160px;
   }
@@ -175,11 +175,20 @@
 
 @media screen and ($mobile-widths) {
   .page-header {
-    min-height: 900px;
+    min-height: 950px;
+    
+    & h1 {
+      margin-top: 50px;
+      font-size: 30px;
+    }
   }
   
   .page-header__title {
     text-align: center;
+    
+    & b {
+      font-size: 20px;
+    }
   }
   
   .page-header__social {
