--- a/assets/templates/crypto/css/faqstyle.css
+++ b/assets/templates/crypto/css/faqstyle.css
@@ -445,7 +445,7 @@ body {
 	margin-bottom: 0;
 	padding-bottom: 50px;
 	color: #949494;
-	text-align: center;
+	text-align: justify;
 }
 
 /*Login*/
