--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Terms - Cryptologi</title>
-  <link rel="stylesheet" href="../css/stylefaq.css">
+  <link rel="stylesheet" href="../css/faqstyle.css">
   <link rel="stylesheet" href="../css/adaptivee.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
