--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -218,6 +218,18 @@
     </div>
   </section>
   <section class="mining"></section>
+  <section class="mining-sub">
+    <div class="container">
+      <div class="mining-sub__flex">
+        <div class="mining-sub__left">
+          <p>confirms transactions in a trustfull<br>manner when enough computational<br>power (effort) is devoted to block</p>
+        </div>
+        <div class="mining-sub__right">
+          <p>creates (issues)<br>new bitcoin<br>in each block</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="truck"></section>
   <section class="proof">
     <div class="container">
@@ -243,7 +255,10 @@
       <p class="proof__resume">It is easy ,on the other hand, for others to check if the requirements were met</p>
     </div>
   </section>
-  <section class="rewards"></section>
+  <section class="rewards">
+    <p>IN PRACTISE:</p>
+    <img src="img/rewards-img.png" alt="">
+  </section>
   <section class="diff">
     <div class="container">
       <div class="diff__flex">
@@ -260,7 +275,9 @@
       </div>
     </div>
   </section>
-  <section class="edge"></section>
+  <section class="edge">
+    <img src="img/edge-img-n.png" alt="">
+  </section>
   <section class="cloud">
     <div class="container">
       <div class="cloud__flex">
