--- a/assets/templates/miner/sass/style.scss
+++ b/assets/templates/miner/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'blocks/hardware';
 @import 'blocks/tabs';
 @import 'blocks/mining';
+@import 'blocks/mining-sub';
 @import 'blocks/truck';
 @import 'blocks/proof';
 @import 'blocks/rewards';
