--- a/assets/templates/miner/css/style.css
+++ b/assets/templates/miner/css/style.css
@@ -187,8 +187,7 @@ body {
   .page-header__about {
     margin-top: 160px; }
   .page-header__item b {
-    padding-bottom: 10px;
-    font-size: 20px; }
+    padding-bottom: 10px; }
   .page-header__item a {
     font-size: 18px; } }
 
@@ -407,13 +406,46 @@ body {
     align-items: center; } }
 
 .mining {
-  min-height: 1100px;
+  min-height: 600px;
   background: url("../img/mining-bg.png") no-repeat top;
   background-size: cover; }
 
 @media screen and (max-width: 1200px) {
   .mining {
-    min-height: 1100px; } }
+    min-height: 500px; } }
+
+.mining-sub p {
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase; }
+
+.mining-sub__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 50px;
+  padding-bottom: 50px; }
+
+.mining-sub__left {
+  padding-bottom: 250px;
+  background: url("../img/mining-left.png") no-repeat bottom; }
+
+.mining-sub__right {
+  width: 300px;
+  padding-bottom: 250px;
+  background: url("../img/mining-right.png") no-repeat bottom; }
+
+@media screen and (max-width: 1200px) {
+  .mining-sub p {
+    font-size: 20px; }
+  .mining-sub__flex {
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    margin-top: 0; } }
 
 .truck {
   min-height: 650px;
@@ -430,19 +462,18 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   padding-bottom: 70px; }
 
 .proof__left {
-  padding: 40px;
   color: #fff;
   font-size: 45px;
   font-weight: bold;
   background: #000; }
   .proof__left p {
-    margin: 0; }
+    margin: 0;
+    padding: 40px; }
 
 .proof__right {
   padding-top: 20px;
@@ -488,10 +519,15 @@ body {
   min-height: 1600px;
   background: url("../img/rewards-bg.png") no-repeat;
   background-size: cover; }
-
-@media screen and (max-width: 1200px) {
-  .rewards {
-    min-height: 1000px; } }
+  .rewards p {
+    padding-top: 170px;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center; }
+  .rewards img {
+    display: block;
+    max-width: 100%;
+    margin: auto; }
 
 .diff__flex {
   display: -webkit-box;
@@ -529,10 +565,15 @@ body {
   background: url("../img/diff-right.png") no-repeat; }
 
 .edge {
-  min-height: 1800px;
+  min-height: 1900px;
   margin-top: -300px;
   background: url("../img/edge-bg.png") no-repeat top;
   background-size: cover; }
+  .edge img {
+    display: block;
+    max-width: 100%;
+    padding-top: 600px;
+    margin: auto; }
 
 .cloud {
   min-height: 850px;
